packages/styles/src/app.scss
/* ... */
.pat {
  overflow-wrap: break-word;
}

.release-flag {
  height: 0.5rem;
  width: 0.5rem;
  display: inline-block;
  border: none;
  border-radius: 50%;
  background-color: bulma-utils.$warning;
  vertical-align: middle;
  margin: 0 5px;
  box-shadow: 0px 0px 2px black;
}
:root.dark .release-flag {
  background-color: bulma-utils.$warning;
  box-shadow: none;
}

.about-logo {
  height: 32px;
  filter: invert(1);
}
:root.dark .about-logo {
  filter: none;
}

// Spinner
.spinner {
    display: block;
}

.spinner-container,
.spinner-overlay-container {
  text-align: center;
  z-index: 100000;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.spinner-overlay-container {
  top: 25%;
  height: 50%;
}

.spinner-container {
  background-color: bulma-utils.$white-ter;
  .spinner {
    color: bulma-utils.$grey-light;
  }
}
:root.dark .spinner-container {
  background-color: bulma-utils.$black-ter;
  .spinner {
    color: bulma-utils.$grey-dark;
  }
}
.spinner-overlay-container {
  background: none;
}

.spinning {
  animation-name: spin;
  animation-duration: 1000ms;
  animation-iteration-count: infinite;
  animation-timing-function: linear; 
}
@keyframes spin {
  from {
    transform:rotate(0deg);
  }
  to {
    transform:rotate(360deg);
  }
}
// end Spinner

.fadeInOut-enter-active {
  animation: fadeIn 500ms
}
.fadeInOut-leave-active {
  animation: fadeOut 500ms
}


.popLater-enter-active {
  transition: opacity .2s linear .5s
}
.popLater-enter, .popLater-leave-active, .popLater-leave-to {
  opacity: 0;
}


.tfa-grid .slideCheckbox-enter-active {
  animation: enterFromTop 500ms
}

.tfa-grid .slideCheckbox-enter-active+.tfa-content {
  animation: addTopOffset 500ms
}

.tfa-grid .slideCheckbox-leave-active {
  animation: leaveToTop 500ms
}

.tfa-grid .slideCheckbox-leave-active+.tfa-content {
  animation: removeTopOffset 500ms
}

// @media screen and (max-width: 768px) {
.tfa-list .slideCheckbox-enter-active {
  animation: enterFromLeft 500ms
}

.tfa-list .slideCheckbox-enter-active+.tfa-content {
  animation: addLeftOffset 500ms
}

.tfa-list .slideCheckbox-leave-active {
  animation: leaveToLeft 500ms
}

.tfa-list .slideCheckbox-leave-active+.tfa-content {
  animation: removeLeftOffset 500ms
}

// }

/*FadeInOut*/

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@media screen and (max-width: 768px) {
  @keyframes fadeIn {
    from {
      opacity: 0;
    }

    75% {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

/*Enter from left*/
@keyframes enterFromLeft {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }

  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes addLeftOffset {
  from {
    transform: translateX(-2.375rem);
  }

  to {
    transform: translateX(0);
  }
}

/*Enter from top*/
@keyframes enterFromTop {
  from {
    transform: translateY(-50%);
    opacity: 0;
  }

  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes addTopOffset {
  from {
    transform: translateY(-2rem);
  }

  to {
    transform: translateY(0);
  }
}

/*Leave from left*/
@keyframes leaveToLeft {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
    opacity: 0;
  }
}

@keyframes removeLeftOffset {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-2.375rem);
  }
}

/*Leave from top*/
@keyframes leaveToTop {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-50%);
    opacity: 0;
  }
}

@keyframes removeTopOffset {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(-2rem);
  }
}

.is-opacity-0 {
  opacity: 0;
}
.is-opacity-1 {
  opacity: 0.1;
}
.is-opacity-2 {
  opacity: 0.2;
}
.is-opacity-3 {
  opacity: 0.3;
}
.is-opacity-4 {
  opacity: 0.4;
}
.is-opacity-5 {
  opacity: 0.5;
}
.is-opacity-6 {
  opacity: 0.6;
}
.is-opacity-7 {
  opacity: 0.7;
}
.is-opacity-8 {
  opacity: 0.8;
}
.is-opacity-9 {
  opacity: 0.9;
}
.is-opacity-10 {
  opacity: 1;
}

.p-1-5 {
  padding: 0.375rem !important;
}

:root.dark .table {
	background-color: bulma-utils.$black-ter;
	color: bulma-utils.$white-bis;
}
:root.dark .table th,
:root.dark .table thead th {
	color: bulma-utils.$grey;
}
:root.dark .table td,
:root.dark .table th {
	border: 1px solid bulma-utils.$grey-darker;
	border-width: 0 0 1px;
}

.card {
	background-color: none;
	border: 1px solid bulma-utils.$grey-lighter;
  box-shadow: none;
}
:root.dark .card {
	background-color: bulma-utils.$black-ter;
	border: 1px solid bulma-utils.$grey-darker;
}

.card-footer {
	border-top: 1px solid bulma-utils.$grey-lighter;
}
:root.dark .card-footer {
	border-top: 1px solid bulma-utils.$grey-darker;
}

.card-footer-item:not(:last-child) {
	border-right: 1px solid bulma-utils.$grey-lighter;
}
:root.dark .card-footer-item:not(:last-child) {
	border-right: 1px solid bulma-utils.$grey-darker;
}

.addressbar {
  padding: 6px;
  border: 1px solid bulma-utils.$grey-light;
  background-color: bulma-utils.$white;
  border-radius: bulma-utils.$radius;
  position: relative;
}
:root.dark .addressbar {
  background-color: bulma-utils.$black-bis;
  border: none;
}

.circled::before {
  display: block;
  content: "";
  position: absolute;
  border-radius: 50%;
  border: 2px solid bulma-utils.$danger;
  left: 35px;
  top: 4px;
  width: 29px;
  height: 29px;
}

.light-or-darker {
  color: bulma-utils.$grey-darker;
}
:root.dark .light-or-darker {
  color: bulma-utils.$grey-light;
}

.width-1-5x {
  width: 1.5em;
}

.lucide {
  // stroke-width: 1.25;
  width: 1.25rem;
  height: 1.25rem;
}
.lucide-default-size {
  // stroke-width: 1.25;
  width: auto;
  height: auto;
}

.icon-size-0-75 {
  width: 0.75rem;
  height: 0.75rem;
}

.icon-size-0-9 {
  width: 0.9rem;
  height: 0.9rem;
}

.icon-size-1 {
  width: 1rem;
  height: 1rem;
}
/* ... */

